# Gravity_changer

./: .gitignore  CMakeLists.txt  README.md  platform
assets/: map.txt
include/: Collectible.hpp  Constants.hpp  EndScreen.hpp  GameHandler.hpp  InfoScreen.hpp  Map.hpp  Player.hpp  StartScreen.hpp
src/: Collectible.cpp  EndScreen.cpp  GameHandler.cpp  InfoScreen.cpp  Map.cpp  Player.cpp  StartScreen.cpp  collisionHandling.cpp  main.cpp
